mini menu alignment fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -230,7 +230,8 @@ ul {
 }
 
 .menu-button {
-  margin: 10%;
+  margin: 5%;
+  width: 80%;
   height: 5vh;
   background-color: #FFE8D6;
   border: 1px solid #DDBEA9;
@@ -255,6 +256,9 @@ ul {
 }
 
 .mini-menu-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
@@ -282,11 +286,9 @@ ul {
 }
 
 .menu-socials {
-  position: absolute;
-  left: 5%;
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  width: 80%;
   height: 5%;
 }
 
